--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "uropay-payment",
   "version": "1.0.0",
-  "description": "UPI payment page using UroPay API (Frontend + Backend)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,13 +9,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  },
-  "author": "Anuj",
-  "license": "MIT"
+  }
 }
