--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uropay-payment",
+  "name": "upi-gateway-payment",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -9,7 +9,6 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
     "node-fetch": "^2.7.0"
