--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-UROPAY_API_URL=https://api.uropay.me/order/generate
-UROPAY_API_KEY=UFQ4Q8U118YE6WYCXLUNYBTKVMTKJXXT
-UROPAY_SECRET=UFQ4Q8U118YE6WYCXLUNYBTKVMTKJXXT
+UPI_GATEWAY_API_URL=https://merchant.upigateway.com/api/create_order
+UPI_GATEWAY_API_KEY=9d03778d-78a8-492a-9b3f-8c5966345810
 PORT=3000
+WEBHOOK_SECRET=mywebhooksecret123
